err/nexus.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/example_module'...
Listing './lib/python3.5/site-packages/example_project'...
Compiling './lib/python3.5/site-packages/example_project/settings.py'...
***   File "./lib/python3.5/site-packages/example_project/settings.py", line 127
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nexus'...
Listing './lib/python3.5/site-packages/nexus/media'...
Listing './lib/python3.5/site-packages/nexus/media/css'...
Listing './lib/python3.5/site-packages/nexus/media/img'...
Listing './lib/python3.5/site-packages/nexus/media/img/admin'...
Listing './lib/python3.5/site-packages/nexus/media/img/facebox'...
Listing './lib/python3.5/site-packages/nexus/media/js'...
Listing './lib/python3.5/site-packages/nexus/media/js/lib'...
Listing './lib/python3.5/site-packages/nexus/media/js/lib/facebox'...
Listing './lib/python3.5/site-packages/nexus/templates'...
Listing './lib/python3.5/site-packages/nexus/templates/nexus'...
Listing './lib/python3.5/site-packages/nexus/templates/nexus/admin'...
Listing './lib/python3.5/site-packages/nexus/templates/nexus/admin/dashboard'...
Listing './lib/python3.5/site-packages/nexus/templatetags'...
Listing './lib/python3.5/site-packages/nexus-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
